04/03/2004  version 0.1.61  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a couple bugs that caused null pointer exceptions when inserting
      around the document root.
    * Fixed it so that when you drag off the tree the cue line is erased.

04/02/2004  version 0.1.60  Ian Lewis <IanLewis@member.fsf.org>

    * Added much better drag and drop support. You can now rearrange nodes
      with ease. The relative location of the drop is used to determine
      where to put the dragged node. Draws a line in between nodes in the
      JTree when nodes will be inserted before or after a node.

04/01/2004  version 0.1.59  Ian Lewis <IanLewis@member.fsf.org>

    * Added an addAdaterNodeAt() method to the AdapterNode class so that
      it would be possible to add better drag and drop functionality, Notably
      being able to rearrange nodes within an element.
    * Added some more fold marks and javadoc to several classes.
    * Added the ability to rearrange text nodes and other nodes that aren't
      elements around within an element.
    * Added support for checking the version and getting command-line help
      for jsXe via command-line options
    * Fixed a bug that didn't allow users to open a document if the DTD couldn't
      be found. Still won't think it's well formed though.

03/31/2004  version 0.1.58  Ian Lewis <IanLewis@member.fsf.org>

    * When you save out of the options panel after you changed options that
      change the XML document itself the open document is marked as dirty.
    * Fixed a bug where the source was not being changed when the encoding
      was changed because the XMLDocument object thought that the source
      was synced with the DOM.

03/18/2004  version 0.1.57  Ian Lewis <IanLewis@member.fsf.org>

    * Added check so that dragging and dropping a node on it's parent doesn't
      do anything and the buffer is not marked dirty (since nothing really
      changed).
