@@ -1,3 +1,11 @@
+04/04/2004  version 0.1.62  Ian Lewis <IanLewis@member.fsf.org>
+
+    * Fixed the problem where dragging an element node that was already
+      selected initiated editing for that node. That was kind of silly so
+      it doesn't do it any more.
+    * Fixed a problem in the serialization where characters weren't resolved
+      to entities in attributes
+
 04/03/2004  version 0.1.61  Ian Lewis <IanLewis@member.fsf.org>
 
     * Fixed a couple bugs that caused null pointer exceptions when inserting
